# substrate-node-template

./: README.md
front-end/src/: Extrinsics.js  TemplateModule.js  Upgrade.js
front-end/src/substrate-lib/components/: TxButton.js
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/init-council/: Cargo.toml
pallets/init-council/src/: lib.rs
pallets/poe/: Cargo.toml
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
