[package]
authors = ['Dan Forbes <dan@parity.io>']
description = 'Dedicated migrations pallet; initialize a collective that is added to a runtime as part of a forkless upgrade with a set of members'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'init-council'
repository = 'https://github.com/paritytech/substrate/'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
hex-literal = "0.2.1"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.frame-system]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.pallet-collective]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.6'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.6'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-collective/std',
    'sp-core/std',
    'sp-runtime/std',
]